--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         }
         .points-container{
             justify-items: center;
-            margin-top: 15px; /* Отступ сверху */
+            margin-top: 30px; /* Отступ сверху */
             font-size: 5vw; /* Размер текста */
             color: white; /* Цвет текста */
             padding: 10px; /* Внутренние отступы */
@@ -212,7 +212,8 @@
             font-size: 25px;
         }
         #invited-count{
-            font-size: 40vw;
+          font-size: 40vw;
+          text-shadow: 1px 1px 60px #f0f0f0;
         }
     </style>
 </head>
